sjengida/g3/CheckBadFlow
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:998:1: error: use of undeclared identifier 'pawnmated_4'
pawnmated_4 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:999:1: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
knightmated_3 = 0; 
^~~~~~~~~~~~~
knightmates
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:990:5: note: 'knightmates' declared here
int knightmates; // [rsp+14h] [rbp-6044h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1000:1: error: use of undeclared identifier 'bishopmated_2'
bishopmated_2 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1001:1: error: use of undeclared identifier 'rookmated_1'
rookmated_1 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1002:1: error: use of undeclared identifier 'queenmated_0'
queenmated_0 = 0; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1298:19: error: use of undeclared identifier 'pawnmated_4'
if ( pawnmates == pawnmated_4 ) 
                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1312:21: error: use of undeclared identifier 'pawnmated_4'
if ( !( pawnmates | pawnmated_4) ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1319:21: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
if ( knightmates != knightmated_3 ) 
                    ^~~~~~~~~~~~~
                    knightmates
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:990:5: note: 'knightmates' declared here
int knightmates; // [rsp+14h] [rbp-6044h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1325:23: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
if ( !( knightmates | knightmated_3) ) 
                      ^~~~~~~~~~~~~
                      knightmates
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:990:5: note: 'knightmates' declared here
int knightmates; // [rsp+14h] [rbp-6044h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1333:6: error: use of undeclared identifier 'bishopmated_2'
if ( bishopmated_2 != bishopmates ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1339:23: error: use of undeclared identifier 'bishopmated_2'
if ( !( bishopmates | bishopmated_2) ) 
                      ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1347:6: error: use of undeclared identifier 'rookmated_1'
if ( rookmated_1 != rookmates ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1353:21: error: use of undeclared identifier 'rookmated_1'
if ( !( rookmates | rookmated_1) ) 
                    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1360:6: error: use of undeclared identifier 'queenmated_0'
if ( queenmated_0 != v6 ) 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1366:19: error: use of undeclared identifier 'queenmated_0'
else if ( !( v6 | queenmated_0) ) 
                  ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1390:13: error: use of undeclared identifier 'pawnmated_4'
pawnmates = pawnmated_4 - 1; 
            ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1391:1: error: use of undeclared identifier 'pawnmated_4'
pawnmated_4 = pawnmates; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1393:15: error: use of undeclared identifier 'bishopmated_2'
bishopmates = bishopmated_2 - 1; 
              ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1394:1: error: use of undeclared identifier 'bishopmated_2'
bishopmated_2 = bishopmates; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1396:13: error: use of undeclared identifier 'rookmated_1'
rookmates = rookmated_1 - 1; 
            ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1397:1: error: use of undeclared identifier 'rookmated_1'
rookmated_1 = rookmates; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1399:6: error: use of undeclared identifier 'queenmated_0'
v6 = queenmated_0 - 1; 
     ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1400:1: error: use of undeclared identifier 'queenmated_0'
queenmated_0 = v6; 
^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1402:1: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
knightmated_3 = knightmates; 
^~~~~~~~~~~~~
knightmates
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:990:5: note: 'knightmates' declared here
int knightmates; // [rsp+14h] [rbp-6044h] 
    ^
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:1404:3: error: use of undeclared identifier 'knightmated_3'; did you mean 'knightmates'?
--knightmated_3; 
  ^~~~~~~~~~~~~
  knightmates
/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/partner.c:990:5: note: 'knightmates' declared here
int knightmates; // [rsp+14h] [rbp-6044h] 
    ^
25 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/gcc/O3/sjeng-gcc-O3/CheckBadFlow/src/obj/partner.o] Error 1
